<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.neo.util</groupId>
	<artifactId>neoutil-root</artifactId>
	<version>1.0.0</version>
	<name>Neo Util Root POM</name>
	<packaging>pom</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<!-- Jakarta -->
		<jakarta.persistence-api.version>3.0.0</jakarta.persistence-api.version>
		<jakarta.enterprise.cdi-api.version>3.0.0</jakarta.enterprise.cdi-api.version>
		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
		<jakarta.transaction-api.version>2.0.1</jakarta.transaction-api.version>
		<jakarta.ws.rs-api.version>3.0.0</jakarta.ws.rs-api.version>
		<jakarta.security.enterprise-api.version>3.0.0</jakarta.security.enterprise-api.version>
		<jakarta.validation.version>3.0.2</jakarta.validation.version>

		<!-- Logging -->
		<slf4j.version>2.0.3</slf4j.version>
		<log4j.version>2.19.0</log4j.version>

		<!-- Class Generation -->
		<javapoet.version>1.13.0</javapoet.version>
		<auto-service.version>1.0.1</auto-service.version>

		<!-- Reflection -->
		<jandex.version>2.4.3.Final</jandex.version>
		<org.reflections.version>0.10.2</org.reflections.version>

		<!-- Jackson -->
		<jackson.version>2.14.2</jackson.version>
		<json-schema-generator.version>4.28.0</json-schema-generator.version>
		<json-schema-validator.version>1.0.76</json-schema-validator.version>
		<!-- Caching -->
		<caffeine.version>3.1.5</caffeine.version>

		<!-- MP Implementation -->
		<helidon.version>3.1.2</helidon.version>
		<!-- Testing -->
		<junit.version>5.9.0</junit.version>
		<mockito.version>4.8.0</mockito.version>
		<h2.version>2.1.214</h2.version>
		<weld.version>4.0.3.Final</weld.version>
		<weld-junit.version>3.1.0.Final</weld-junit.version>

		<!-- Maven -->
		<maven.core.version>3.8.5</maven.core.version>
		<maven.testing.version>3.3.0</maven.testing.version>
		<maven.tools.version>3.6.4</maven.tools.version>
		<maven.plugin.plugin.version>3.7.0</maven.plugin.plugin.version>
		<surefire.version>3.0.0-M8</surefire.version>
		<build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
		<compiler.plugin.version>3.11.0</compiler.plugin.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>integration</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.version}</version>
						<configuration>
							<!-- the 2gb of memory are needed by the tests of resource optimization -->
							<argLine>-Xms384m -Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:-OmitStackTraceInFastThrow --enable-preview</argLine>
							<includes>
								<include>**/Test*.java</include>
								<include>**/*Test.java</include>
								<include>**/*TestCase.java</include>
								<include>**/*IT.java</include>
							</includes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<modules>
		<module>common</module>
		<module>framework</module>
		<module>jakarta/maven-plugin</module>
		<module>jakarta/startup</module>
		<module>jakarta/elastic</module>
		<module>jakarta/database</module>
		<module>jakarta/rest</module>
		<module>jakarta/cache-caffeine</module>
		<module>microprofile</module>
		<module>helidon</module>
	</modules>
</project>